; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v10/drivers/extr_ds1302.c_ds1302_readreg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v10/drivers/extr_ds1302.c_ds1302_readreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i8 @ds1302_readreg(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i32 %0, i32* %2, align 4
  %4 = call i32 (...) @start()
  %5 = load i32, i32* %2, align 4
  %6 = shl i32 %5, 1
  %7 = or i32 129, %6
  %8 = call i32 @out_byte(i32 %7)
  %9 = call zeroext i8 (...) @in_byte()
  store i8 %9, i8* %3, align 1
  %10 = call i32 (...) @stop()
  %11 = load i8, i8* %3, align 1
  ret i8 %11
}

declare dso_local i32 @start(...) #1

declare dso_local i32 @out_byte(i32) #1

declare dso_local zeroext i8 @in_byte(...) #1

declare dso_local i32 @stop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
